--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 HELP.md
 target/
+src/main/resources/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
 
 ### STS ###
 .apt_generated
