--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3307/ecommerce
+spring.datasource.url=jdbc:mariadb://localhost:3306/ecommerce
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
